src/Shared-components/navbar/style.module.css
.logo {
  color: inherit !important;
  font-size: 2rem;
}
.logo__link {
  color: inherit
}
.nav {
  color: #fff;
}
.nav_bg {
  color: #223364;
}
.nav_bg .toggler {
  color: #223364
}

.navbar-scrolled {
  background-color: rgba(255, 255, 255, 0.9) !important;
  color: #223364;
}
.toggler {
  color: #fff;
  font-size: 1.5rem;
}
.navbar-scrolled .toggler {
  color: #223364;
}
.item {
  font-size: 1.3rem;
  color: inherit;
}

@media (max-width: 600px) {
  .nav {
    border-bottom: 1px solid #ddd;
  }
  .logo {
    margin-left: 0.5rem;
    margin-bottom: 0;
  }
}

@media (max-width: 991px) {
  .navigation_list {
    background-color: rgb(255, 255, 255);
    width: 100%;
  }

  .navigation_list a {
    color: #223364;
  }
}

